Ajustando download do zip
